gccida/g2/undo_all
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:3325:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undos = undobuf_0.undos; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:3326:6: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
if ( undobuf_0.undos ) 
     ^~~~~~~~~
     undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:3328:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees = undobuf_0.frees; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:3349:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undos; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:3356:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.undos = 0LL; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/undo_all/src/obj/combine.o] Error 1
